--- a/src/global.css
+++ b/src/global.css
@@ -8,4 +8,6 @@ body {
   background-color: var(--main-bg-color);
   color: var(--main-color);
   background-image: url(assets/pelicans.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
