--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,7 @@
 body {
   background-color: var(--main-bg-color);
   color: var(--main-color);
-  background-image: url(assets/pelicans.jpg);
+  /* background-image: url(assets/pelicans.jpg); */
   background-repeat: no-repeat;
   background-size: cover;
 }
